[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
async-std = {version = "1.12.0", features= ["attributes", "unstable", "tokio1"]}
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.1.8", features = ["derive"]}
yahoo_finance_api = "1.1"
futures = "0.3"
xactor = "0.7.11"
ctrlc = "3.4.0"
